<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.zai.mamsad.ui.home.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_home_to_catalog"
            app:destination="@id/nav_catalog" />
        <action
            android:id="@+id/action_home_to_filters"
            app:destination="@id/nav_filters" />
        <action
            android:id="@+id/action_home_to_detail"
            app:destination="@id/nav_detail" />
        <action
            android:id="@+id/action_home_to_favorites"
            app:destination="@id/nav_favorites" />
        <action
            android:id="@+id/action_home_to_map"
            app:destination="@id/nav_map" />
    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.zai.mamsad.ui.map.MapFragment"
        android:label="@string/map_title">
        <action
            android:id="@+id/action_map_to_detail"
            app:destination="@id/nav_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_catalog"
        android:name="com.zai.mamsad.ui.catalog.CatalogFragment"
        android:label="@string/catalog_title">
        <action
            android:id="@+id/action_catalog_to_detail"
            app:destination="@id/nav_detail" />
        <action
            android:id="@+id/action_catalog_to_filters"
            app:destination="@id/nav_filters" />
    </fragment>

    <fragment
        android:id="@+id/nav_filters"
        android:name="com.zai.mamsad.ui.filters.FiltersFragment"
        android:label="@string/filters_title">
        <action
            android:id="@+id/action_filters_to_catalog"
            app:destination="@id/nav_catalog"
            app:popUpTo="@id/nav_home"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.zai.mamsad.ui.favorites.FavoritesFragment"
        android:label="@string/favorites_title">
        <action
            android:id="@+id/action_favorites_to_detail"
            app:destination="@id/nav_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.zai.mamsad.ui.about.AboutFragment"
        android:label="@string/about_title" />

    <fragment
        android:id="@+id/nav_detail"
        android:name="com.zai.mamsad.ui.detail.DetailFragment"
        android:label="@string/catalog_title">
        <argument
            android:name="orgId"
            app:argType="integer" />
    </fragment>
</navigation>
